# almost-rusty

./: Cargo.toml  README.md  build.rs
asset_generator/: Cargo.toml
asset_generator/src/: lib.rs
assets/: window.ron
assets/config/: window.ron  window.toml
assets/shaders/: triangle.shader
src/: main.rs  utils.rs
src/assets/: mod.rs  shader_asset.rs  shader_meta.rs  shader_program_asset.rs  shader_program_meta.rs  window_config.rs
src/assets/config/: mod.rs  window.rs
src/assets/database/: mod.rs
src/assets/database/config/: mod.rs
src/assets/database/shaders/: mod.rs
src/graphics/gl/shader/: mod.rs  program.rs  shader.rs  shader_program.rs  shader_type.rs
src/utils/: log.rs  mod.rs  string.rs
