[package]
name = "almost-rusty"
version = "0.1.0"
authors = ["almostbearded"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.20.0"
glutin = "0.22.1"
gl = "0.14.0"
log = { version = "0.4", features = ["std"] }
serde =  { version = "1.0.104", features = ["derive"] } 
toml = "0.5.6"

[build-dependencies]
walkdir = "2.3.1"
voca_rs = "1.9.1"

[build-dependencies.config_struct]
git = "https://github.com/AlmostBearded/config_struct"
version = "~0.3.0"
features = ["toml-parsing"]
