[package]
name = "almost-rusty"
version = "0.1.0"
authors = ["almostbearded"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.20.0"
glutin = "0.22.1"
gl = "0.14.0"
log = { version = "0.4", features = ["std"] }
serde =  { version = "1.0.104", features = ["derive"] } 
toml = "0.5.6"
ron = "0.5.1"

[build-dependencies]
asset_generator = { path = "asset_generator" }

